app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    app: app-example-spartan
    app.kubernetes.io/component: web
    app.kubernetes.io/instance: app-example-spartan
    app.kubernetes.io/name: app-example-spartan
    app.kubernetes.io/part-of: app-example-spartan
    app.openshift.io/runtime: java
  name: app-example-spartan
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-example-spartan
  template:
    metadata:
      labels:
        app: app-example-spartan
    spec:
      containers:
      - name: app-example-spartan
        imagePullPolicy: Always
        image: quay.io/siamaksade/app-example-spartan:latest
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 45
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        - containerPort: 8778
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 45
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
