app/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: app-example-spartan
  name: app-example-spartan
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: app-example-spartan
    weight: 100
